# kernel-hardening-checker

./: .gitignore  .woodpecker.yml  Alpinelinux-edge.config  MANIFEST.in  README.md  checklist.py  default.nix  issues.md  kconfig-hardened-check.py  kspp-recommendations.config  outputter.py  pyproject.toml  pytest.ini  requirements-dev.txt  setup.cfg  setup.py  update_configs.sh
.github/workflows/: engine_unit-test.yml  engine_unit-test_no-coverage.yml  engine_unit-test_no_coverage.yml  functional_test.sh  functional_test.yml  functional_test_no-coverage.yml  main.yml  package_test.yml  static_analysis.yml  static_typing_test.yml
.woodpecker/: engine_unit-test.yml  functional_test.yml  package_test.yml  static_analysis.yml
config_files/: Archlinux-Testing.config  Archlinux-hardened.config  Fedora-Rawhide.config  Kali-linux.config  Mageia-cauldron.config  Opensuse-git.config  Owl-3.1config  Parrot-security-4.1.config  Qubes-latest.config  Trisquel-Flidas.config  debian-sid-amd64.config  debian-stretch.config  example-paranoiac.config  kspp-recommendations-arm.config  kspp-recommendations-arm64.config  kspp-recommendations-x86-32.config  kspp-recommendations.config  links.txt  openSUSE-15.0.config  oracle-uek5.config  pentoo-hardened-2018.0rc7.config
config_files/defconfigs/: arm64_defconfig_5.4.config  arm_defconfig_5.0.config  x86_32_defconfig_4.20.config  x86_32_defconfig_5.5.config  x86_64_defconfig_5.0.config  x86_64_defconfig_5.4.config
config_files/distros/: Alpinelinux-edge.config  AmazonLinux2.config  Archlinux-hardened.config  SLE15.config  clipos_kernel_doc.txt  debian-buster.config  openSUSE-15.1.config  oracle-uek5.config  oracle-uek6.config  pentoo-4.17.11.config  pentoo-livecd.config  rhel-8.0.config  ubuntu-bionic-generic.config
config_files/kspp-recommendations/: kspp-recommendations-arm.config  kspp-recommendations-arm64.config  kspp-recommendations-x86-32.config  kspp-recommendations-x86-64.config
contrib/: get-nix-kconfig.py
kconfig-hardened-check/: checklist.py  kconfig-hardened-check.py  outputter.py
kconfig-hardened-check/config_files/defconfigs/: arm64_defconfig_5.5.config
kconfig-hardened-check/config_files/distros/: ubuntu-bionic-generic.config
kconfig-hardened-check/config_files/kspp-recommendations/: kspp-recommendations-arm64.config  kspp-recommendations-x86-32.config
kconfig_hardened_check/: __about__.py  __init__.py  checklist.py  checks.py  engine.py  options.py  test_engine.py  userconfig.py
kconfig_hardened_check/config_files/: links.txt
kconfig_hardened_check/config_files/defconfigs/: arm64_defconfig_4.20.config  arm64_defconfig_5.14.config  arm64_defconfig_5.17.config  arm64_defconfig_5.17_clang.config  arm64_defconfig_5.7.config  arm64_defconfig_5.9.config  arm64_defconfig_6.1.config  arm_defconfig_5.10.config  arm_defconfig_5.14.config  arm_defconfig_5.5.config  arm_defconfig_5.9.config  arm_defconfig_6.1.config  x86_32_defconfig_5.10.config  x86_32_defconfig_5.14.config  x86_32_defconfig_5.4.config  x86_32_defconfig_5.7.config  x86_32_defconfig_5.9.config  x86_64_defconfig_4.20.config  x86_64_defconfig_5.10.config  x86_64_defconfig_5.14.config  x86_64_defconfig_5.17.config  x86_64_defconfig_5.9.config
kconfig_hardened_check/config_files/distros/: Archlinux-hardened.config  SLE15.config  android_pixel-7.config  aosp_pixel3a.config  cbl-mariner.config  clipos_kernel_doc.txt  debian-buster.config  debian-stretch.config  fedora_34.config  get-nix-kconfig.py  nixpkgs-linux_4_14.config  nixpkgs-linux_4_14_hardened.config  nixpkgs-linux_4_19.config  nixpkgs-linux_4_19_hardened.config  nixpkgs-linux_5_10.config  nixpkgs-linux_5_10_hardened.config  nixpkgs-linux_5_15.config  nixpkgs-linux_5_15_hardened.config  nixpkgs-linux_5_4.config  nixpkgs-linux_6_0.config  nixpkgs-linux_6_0_hardened.config  nixpkgs-linux_6_1.config  nixpkgs-linux_hardened.config  nixpkgs-linux_latest_libre.config  nixpkgs-linux_libre.config  nixpkgs-linux_lqx.config  nixpkgs-linux_lts.config  nixpkgs-linux_testing_bcachefs.config  nixpkgs-linux_xanmod.config  nixpkgs-linux_xanmod_stable.config  nixpkgs-linux_zen.config
kconfig_hardened_check/config_files/kspp-recommendations/: kspp-kconfig-x86-32.config  kspp-recommendations-arm.config  kspp-recommendations-arm64.config  kspp-recommendations-x86-32.config  kspp-recommendations-x86-64.config
kernel_hardening_checker/: __about__.py  __init__.py  checks.py  cli.py  engine.py  test_engine.py
kernel_hardening_checker/config_files/: links.txt
kernel_hardening_checker/config_files/defconfigs/: arm64_defconfig_5.0.config  arm64_defconfig_5.10.config  arm64_defconfig_5.14_clang.config  arm64_defconfig_6.10.config  arm64_defconfig_6.10_clang.config  arm64_defconfig_6.16.config  arm64_defconfig_6.17.config  arm64_defconfig_6.1_clang.config  arm64_defconfig_6.6.config  arm64_defconfig_6.6_clang.config  arm_defconfig_4.20.config  arm_defconfig_5.17.config  arm_defconfig_5.4.config  arm_defconfig_5.7.config  arm_defconfig_6.10.config  arm_defconfig_6.16.config  arm_defconfig_6.17.config  arm_defconfig_6.6.config  i386_defconfig_5.17.config  i386_defconfig_6.10.config  i386_defconfig_6.16.config  i386_defconfig_6.17.config  i386_defconfig_6.6.config  riscv_defconfig_4.20.config  riscv_defconfig_5.0.config  riscv_defconfig_5.10.config  riscv_defconfig_5.14.config  riscv_defconfig_5.17.config  riscv_defconfig_5.5.config  riscv_defconfig_6.0.config  riscv_defconfig_6.1.config  riscv_defconfig_6.10.config  riscv_defconfig_6.16.config  riscv_defconfig_6.17.config  riscv_defconfig_6.2.config  riscv_defconfig_6.3.config  riscv_defconfig_6.4.config  riscv_defconfig_6.5.config  riscv_defconfig_6.6.config  riscv_defconfig_6.7.config  (+12 more)
kernel_hardening_checker/config_files/distros/: Alma_Linux_10_aarch64.config  Alma_Linux_10_x86_64.config  Alma_Linux_8_aarch64.config  Alma_Linux_8_ppc64le.config  Alma_Linux_8_s390x.config  Alma_Linux_8_x86_64.config  Alma_Linux_9_aarch64.config  Alma_Linux_9_ppc64le.config  Alma_Linux_9_s390x.config  Arch_x86_64.config  (+225 more)
man/: kernel-hardening-checker.1
tests/: __init__.py  test_configs.py
(+45 files in other folders)
