[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
version = {attr = "kernel_hardening_checker.__version__"}

[project]
name = "kernel-hardening-checker"
requires-python = ">= 3.9"
dynamic = ["version"]
description = "A tool for checking the security hardening options of the Linux kernel"
readme = "README.md"
authors = [
  {name = "Alexander Popov", email = "alex.popov@linux.com"}
]
maintainers = [
  {name = "Alexander Popov", email = "alex.popov@linux.com"}
]
license = "GPL-3.0-only"
license-files = ["LICENSE.txt"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Security",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
]

[project.scripts]
kernel-hardening-checker = "kernel_hardening_checker:main"

[project.urls]
homepage = "https://github.com/a13xp0p0v/kernel-hardening-checker"
repository = "https://github.com/a13xp0p0v/kernel-hardening-checker.git"
bugtracker = "https://github.com/a13xp0p0v/kernel-hardening-checker/issues"

[tool.pylint.format]
max-line-length = 120

[tool.ruff.lint]
select = [
    "S",    # flake8-bandit
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "COM",  # flake8-commas
    "C4",   # flake8-comprehensions
    "CPY",  # flake8-copyright
    "EXE",  # flake8-implicit-str-concat
    "FIX",  # flake8-fixme
    "INT",  # flake8-gettext
    "ISC",  # flake8-implicit-str-concat
    "PIE",  # flake8-pie
    "Q",    # flake8-quotes
    "RET",  # flake8-return
    "SLF",  # flake8-self
    "SIM",  # flake8-simplify (please fix issues manually)
    "ARG",  # flake8-unused-arguments
    "FLY",  # flynt
    "I",    # isort
    "N",    # pep8-naming
    "PERF", # Perflint
    "E",    # pycodestyle error
    "W",    # pycodestyle warning
    "F",    # Pyflakes
    "PL",   # pylint
    "UP",   # pyupgrade
    "RUF",  # Ruff-specific rules
]

ignore = [
    "E114", # used for comment alignment
    "E116", # used for comment alignment
    "E741", # used for short variables
    "Q003", # sometimes escape is better than changing quotes
    "PLR2004", # TODO: This requirement is excessive; however, I recommend removing the exception, and check for some refactoring.
    "S101", # used for asserts
    "S404", # used for subprocess
    "S603", # used for subprocess
]

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[tool.ruff.lint.pylint]
max-args = 6
max-branches = 15
max-statements = 100

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.flake8-copyright]
notice-rgx = "SPDX-FileCopyrightText"

[tool.ruff.lint.per-file-ignores]
# File-specific rule exceptions:
# kernel_hardening_checker/__init__.py:
#   PLR0912 — many branches are required due to many parse options, though may be changed later.

# kernel_hardening_checker/test_engine.py:
#   E501 — long lines are intentional in tests for clarity.
#   E202, E502 — test code uses patterns that formally break style rules
#                but are needed for precise behavior checks.

# kernel_hardening_checker/engine.py:
#   PLR5501 — branching readability rule conflicts with the module’s
#             flat decision-flow structure.
#   PLR0912 — high branch count is used in the engine’s complex check logic.

# kernel_hardening_checker/checks.py:
#   PLR0912 — many branches are required due to numerous checks.
#   PLR0914 — many local variables are unavoidable for separate checks.
#   PLR0915 — nested/long logic is inherent to complex check scenarios.

"kernel_hardening_checker/__init__.py" = ["PLR0912"]
"kernel_hardening_checker/test_engine.py" = ["E501", "E202", "E502"]
"kernel_hardening_checker/engine.py" = ["PLR5501" , "PLR0912"]
"kernel_hardening_checker/checks.py" = ["PLR0912", "PLR0914", "PLR0915"]
