[metadata]
name = kconfig-hardened-check
author = Alexander Popov
author_email = alex.popov@linux.com
home_page = https://github.com/a13xp0p0v/kconfig-hardened-check
description = A tool for checking the security hardening options of the Linux kernel
long_description = file: README.md
license = GNU General Public License v3 (GPLv3)
license_file = LICENSE.txt
classifiers =
	Development Status :: 5 - Production/Stable
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Topic :: Security
	Operating System :: POSIX :: Linux
	Environment :: Console
	Programming Language :: Python :: 3

[options]
setup_requires = setuptools
packages =
	kconfig_hardened_check
	kconfig_hardened_check.config_files
	kconfig_hardened_check.config_files.defconfigs
	kconfig_hardened_check.config_files.distros
	kconfig_hardened_check.config_files.kspp-recommendations
include_package_data = true

[options.entry_points]
console_scripts =
	kconfig-hardened-check = kconfig_hardened_check:main

